--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
